Responsiveness issue:The menubar is not responsive #462
The responsiveness issue has been resolved for tablet screen size.

--- a/css/custom.css
+++ b/css/custom.css
@@ -298,3 +298,8 @@ nav{
   display: flex;
   flex-wrap: wrap;
 }
+@media screen and (min-width: 768px) and (max-width: 992px){
+  .overlay-nav .menu li{
+    margin-right: 20px;
+  }
+}
